# Mammo-CLIP

./: .gitignore  310pyproject.toml  README.md  cxr-foundation.py  extract_features_vindr_abnormal.fish  process_images.fish  pyproject.toml  requirements.txt  train_abnormal.fish
src/codebase/: augment_text.py  extract_features.py  load_features.py  train_classifier.py  train_detector.py
src/codebase/breastclip/data/datasets/: imagetext.py
src/codebase/configs/: pre_train_b2_clip.yaml  pre_train_b5_clip.yaml  pre_train_b5_w_vindr_clip.yaml  zs_clip.yaml
src/codebase/configs/model/: clip_b2_det_clinical.yaml  clip_b5_det_clinical.yaml
src/codebase/configs/tokenizer/: clinical_bert.yaml
src/codebase/notebooks/Mammo-Factor/: Mammo-Factor.ipynb
src/codebase/notebooks/Tutorial/: Downstream_classifier_tutorial.ipynb  Get_Embedding_Vision_encoder_Mammo_CLIP_tutorial.ipynb
src/codebase/notebooks/Tutorial/.ipynb_checkpoints/: Downstream_classifier_tutorial-checkpoint.ipynb  (+1 more)
src/codebase/notebooks/preprocess-clip/: VinDr.ipynb
src/preprocessing/: preprocess_VinDr_detector.py  preprocess_image_to_png_kaggle.py  preprocess_image_to_png_vindr.py
src/scripts/: augment_text.sh  classifier_fine_tune_b2.sh  classifier_fine_tune_b5.sh  classifier_linear_probe_b2.sh  classifier_linear_probe_b5.sh  detector_fine_tune_b2.sh  detector_fine_tune_b5.sh  detector_linear_probe_b2.sh  detector_linear_probe_b5.sh  pretrain_mammo_clip_b2.sh  pretrain_mammo_clip_b2_ddp.sh  pretrain_mammo_clip_b5.sh  pretrain_mammo_clip_b5_ddp.sh  pretrain_mammo_clip_w_vindr_b5.sh
(+2 files in other folders)
